Fix collapsable menu

--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,35 @@ a:visited {
   background: transparent;
   border-bottom: 4px solid;
 }
+.navbar-default {
+  background: transparent !important;
+  border: none !important;
+}
+.navbar-default .navbar-nav>li>a {
+    color: #ffffff;
+}
+.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
+    color: #ffffff;
+    background-color: transparent;
+}
+.navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>li>a:hover {
+    color: #ffffff;
+    background-color: transparent;
+    border-bottom: 3px solid #ffffff;
+}
+.navbar-default .navbar-brand, .navbar-default .navbar-brand:hover {
+    color: #ffffff;
+}
+.navbar-default .navbar-toggle,
+.navbar-default .navbar-collapse, .navbar-default .navbar-form {
+    border: none;
+}
+.navbar-default .navbar-toggle .icon-bar {
+    background-color: #ffffff;
+}
+.navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover  {
+    background-color: transparent;
+}
 header h2 {
   font-weight: 900;
   letter-spacing: 0.15em;
